# marketsignalos

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  ingestor-smoke.yml
apps/api/: README.md  pyproject.toml
apps/api/src/marketsignalos_api/: __init__.py  main.py
apps/api/src/marketsignalos_api/api/routes/: health.py
apps/api/tests/: test_health.py  test_smoke.py
apps/web/: package-lock.json  package.json
docs/: 0001-tech-stack.md  architecture.md  kalshi-ingestion-faq.md  kalshi-ingestion-next-steps.md  prd.md  runbook.md
services/ingestor/: README.md  pyproject.toml
services/ingestor/src/marketsignalos_ingestor/: __init__.py  kalshi_client.py  models.py  pipeline.py  storage.py  worker.py
services/ingestor/tests/: test_kalshi_client.py  test_pipeline.py  test_storage.py  test_worker.py
