[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketsignalos-api"
version = "0.1.0"
description = "MarketSignalOS FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "prometheus-client",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "mypy",
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
